tests/lean/set_attr1.lean.expected.out
set_attr1.lean:14:0: error: tactic failed, result contains meta-variables
state:
n : ℕ
⊢ f n = n + 1
